manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "opstestcluster-2f5a"
    labels:
        app: "opstestcluster-2f5a"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "opstestcluster-2f5a"
