manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "opstestcluster-52d7"
    labels:
        app: "opstestcluster-52d7"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: ops-nhgis-assets-opstestcluster-52d7.7a691896395b4063902a.centralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "opstestcluster-52d7"
                servicePort: 80
